tests/errors/sem.fficall-mismatch.return-type.or
main :: () -> void {
    @fficall "asdasd.a", "decl", void, "something";
    @fficall "asdasd.a", "decl", int, "something";
};
